--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -136,7 +136,7 @@
             <span class="material-symbols-outlined">email</span>
             <div class="contacto-detalles">
               <h4>Email</h4>
-              <p><a href="mailto:info@musicacastillo.com" class="contacto-enlace">info@musicacastillo.com</a></p>
+              <p><a href="mailto:info&#64;musicacastillo.com" class="contacto-enlace">info&#64;musicacastillo.com</a></p>
             </div>
           </div>
           
@@ -181,7 +181,7 @@
             <span class="material-symbols-outlined">email</span>
             <input 
               type="email" 
-              placeholder="tu-email@ejemplo.com" 
+              placeholder="tu-email&#64;ejemplo.com" 
               class="newsletter-input"
               [(ngModel)]="emailNewsletter"
               name="email"
