--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -109,7 +109,7 @@
                   </div>
                   <div class="user-details">
                     <span class="user-name">{{ nombreUsuario }}</span>
-                    <span class="user-email">usuario@email.com</span>
+                    <span class="user-email">usuario&#64;email.com</span>
                   </div>
                 </div>
                 <ul class="dropdown-menu">
